--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.2",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
