--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@headlessui/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "aos": "3.0.0-beta.6",
+    "gray-matter": "^4.0.3",
     "next": "^15.1.11",
+    "next-mdx-remote": "^6.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "reading-time": "^1.5.0",
     "resend": "^6.9.2",
     "typescript": "^5.7.3"
   },
