feat: auth con NextAuth + Supabase + dashboard base

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.11.1",
     "@calcom/embed-react": "^1.5.3",
     "@headlessui/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.98.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
@@ -18,6 +20,7 @@
     "aos": "3.0.0-beta.6",
     "gray-matter": "^4.0.3",
     "next": "^15.1.11",
+    "next-auth": "^4.24.13",
     "next-mdx-remote": "^6.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.2.3",
